# live-resonance

./: .gitignore  README.md  README_zh.md  main.py  main.spec  main_window.py  pyproject.toml
core/: __init__.py  keyboard_manager.py  message_player.py  midi_in_manager.py  midi_out_manager.py  note_manager.py  octave_manager.py  sustain_manager.py
logger/: __init__.py  log_delegate.py  log_model.py  log_widget.py  logger.py  qt_signal_handler.py
models/: __init__.py  app_config.py  key_map_config.py  key_out_config.py  midi_in_config.py  midi_out_config.py  player_config.py
scripts/: ui_compile.py
templates/: bass_E1-B2_20keys.yaml  bass_E1-F4_38keys.yaml  drum.yaml  guitar_C3-B4_24keys.yaml  guitar_E2-B4_32keys.yaml  guitar_E2-D6_47keys.yaml  piano_A0-B6_63keys.yaml  piano_A0-C8_88keys.yaml  piano_C3-B6_48keys.yaml
tests/: key_listener.py  press_key_loop.py
ui/: key_map_widget.ui  key_out_group_box.ui  log_widget.ui  main_window.ui  midi_in_widget.ui  midi_out_group_box.ui  out_widget.ui  player_config_widget.ui
utils/: midi_utils.py  system_utils.py  ui_constants.py
views/: about_dialog.py  key_map_widget.py  key_out_group_box.py  midi_in_widget.py  midi_out_group_box.py  out_widget.py  piano_key_button.py  piano_widget.py  player_config_widget.py
