[project]
name = "live-resonance"
version = "1.0.0"
description = "Play Blue Protocol: Star Resonance virtual instruments live with any MIDI device"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "mido[ports-rtmidi]>=1.3.3",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyside6>=6.10.2",
    "pywin32>=311",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-keyboard>=0.13.2.20250801",
    "types-psutil>=7.2.2.20260130",
    "types-pywin32>=311.0.0.20260317",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = 3.12
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["./"]
exclude = ["^.venv/", "^dist/", "^build/", "^ui/"]

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true
